--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,27 +1,36 @@
-.App h1 {
+.Weather {
+  max-width: 600px;
+  margin: 30px auto;
+  font-family: "Raleway", sans-serif;
+  background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+  border: 1px solid #42a5f5;
+  border-radius: 10px;
+  box-shadow: 3px 7px 10px rgb(110, 109, 109);
+}
+.Weather h1 {
   color: #42a5f5;
   text-align: center;
   font-size: 50px;
 }
-.App h3 {
+.Weather h3 {
   color: #ab47bc;
   font-size: 85px;
   padding: 5px;
   line-height: 100px;
 }
-.App a {
+.Weather a {
   color: #42a5f5;
   cursor: default;
   text-decoration: none;
 }
-.App canvas {
-  margin: 0 auto;
+.Weather canvas {
+  margin: 5px 8px auto;
 }
-.App .active {
+.Weather .active {
   color: #ab47bc;
   cursor: default;
 }
-.App .active:hover {
+.Weather .active:hover {
   text-decoration: none;
   color: #ab47bc;
 }
@@ -30,42 +39,39 @@
   position: relative;
   top: -32px;
 }
+
+.date-time,
 .weatherDetails {
   text-align: Left;
-  margin: -3px 2px 10px 25px;
+  margin: 25px;
+  font-size: 20px;
+  color: white;
+  list-style-type: none;
+  line-height: 1;
+  padding: 0;
 }
 .Weather form {
   margin: 20px;
-
-  text-align: center;
-}
-.Weather label {
-  font-size: 20px;
-  margin-bottom: 3px;
-  color: #ffff;
+  padding: 10px;
 }
 
 .Weather .btn {
+  font-size: 14px;
   border: 1px solid #8ca3ca;
   border-radius: 5px;
   padding: 7px 25px;
   background: #a6c1ee;
   box-shadow: 4px 4px 5px rgb(138, 135, 135);
   transition: (all 200ms ease-in-out);
+  margin: 0 auto;
 }
 .Weather .btn:hover {
   background: #fbc2eb;
   border: 1px solid #8ca3ca;
 }
-ul,
+
 .date-time {
-  text-align: left;
-  font-size: 20px;
-  color: white;
-  list-style-type: none;
-  line-height: 1;
-  padding: 0;
-  margin-left: 10px;
+  margin: 35px;
 }
 
 .form-control {
